<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffff"
    android:orientation="vertical"
    android:paddingBottom="15dp"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:paddingTop="15dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center">

        <ImageView
            android:id="@+id/foto_objeto"
            android:layout_width="86dp"
            android:layout_height="86dp"
            android:padding="0dp"
            android:src="@android:drawable/ic_menu_camera"/>

    </LinearLayout>

    <TextView android:text="@string/objeto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"/>

    <EditText
        android:id="@+id/objeto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nome_objeto_hint"
        android:inputType="text">

    </EditText>

        <requestFocus/>

    <Button
        android:id="@+id/botao_selecionar_contato"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/selecionar_lista_de_contatos"/>

    <TextView
        android:id="@+id/cadastro_objeto_campo_pessoa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="15sp"
        android:visibility="gone"/>

   <!-- <TextView android:text="@string/emprestado_para"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"/>

    <EditText
        android:id="@+id/emprestado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nome_pessoa_hint"
        android:inputType="textPersonName"/>

    <TextView android:text="@string/telefone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"/>

    <EditText
        android:id="@+id/telefone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"/>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingTop="15dp">

        <Button
            android:id="@+id/button_salvar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/salvar"/>

        <Button
            android:id="@+id/button_sair"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sair"/>
    </LinearLayout>

</LinearLayout>
